--- a/SpeakersService/appsettings.json
+++ b/SpeakersService/appsettings.json
@@ -1,8 +1,13 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost;Database=Speakers;User=root;Password=password;"
+  },
+
   "Logging": {
     "LogLevel": {
       "Default": "Warning"
     }
   },
+
   "AllowedHosts": "*"
 }
