--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,10 @@
 # User-specific files (MonoDevelop/Xamarin Studio)
 *.userprefs
 
+# Database
+Files/*
+!Files/.gitkeep 
+
 # Build results
 [Dd]ebug/
 [Dd]ebugPublic/
